--- a/appengine/config_service/ui/src/config-ui/config-ui.html
+++ b/appengine/config_service/ui/src/config-ui/config-ui.html
@@ -70,7 +70,7 @@
               </a>
             </div>
 
-            <a href="https://luci-config.appspot.com/_ah/api/explorer" 
+            <a href="/_ah/api/explorer" 
                class="link" 
                target="_blank"> APIs explorer 
             </a>
